<?xml version="1.0"?>
<package format="2">
  <name>uav_frontier_exploration_3d</name>
  <version>1.0.0</version>
  <description>A ROS package that implements a 3d exploration algorithm.</description>

  <author>Ana Batinovic</author>
  <maintainer email="ana.batinovic@fer.hr">Ana Batinovic</maintainer>

  <license>FER</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>messages_88</depend>

  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>geographic_msgs</depend>
  <depend>mean_shift_clustering</depend>
  <depend>nav_msgs</depend>
  <depend>nodelet</depend>
  <depend>octomap</depend>
  <depend>octomap_ros</depend>
  <depend>octomap_msgs</depend> 
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>


  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>libpcl-all</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>
  </export>

</package>
